--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   },
   "dependencies": {
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-mde": "^11.5.0",
+    "react-split": "^2.0.14",
+    "showdown": "^2.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
